# localized-unidecode

./: LICENSE  README.md  komponentinis.mdzip  komponentinis.mdzip.bak  pyproject.toml  requirements.txt
docs/: conf.py  index.rst  installation.rst  localized_unidecode.rst  localized_unidecode.utils.mappings.rst  localized_unidecode.utils.rst  modules.rst  requirements.txt  user_documentation.rst
src/localized-unidecode/: localized_unidecode.py
src/localized-unidecode/utils/mappings/: BG.json
src/localized_unidecode/: decoder.py
src/localized_unidecode/utils/mappings/: BE.json  BG.json  CYRILLIC.json  GB.json  JP.json  LT.json
tests/: test_decoder.py  test_transliterations.py
