[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localized-unidecode"
version = "0.0.1"
authors = [
  { name="Kristupas TalaÄka", email="kristalacka@gmail.com" },
]
description = "Localized text decoder for converting text into ascii (latin transliteration without extensions)."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"